BugFix: iframe expanded out of bounds, fix erroneous wrap
    iframe expanding out of bounds. Fix by removing erroneous
    flex wrap in .proj-media rules

--- a/styles/project2.css
+++ b/styles/project2.css
@@ -147,7 +147,6 @@ footer {
 .proj-media {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     gap: 16px;
     margin-bottom: 16px;
 }
@@ -199,6 +198,8 @@ footer {
 }
 
 .clip-card iframe {
+    display: block;
     width: 100%;
     aspect-ratio: 16 / 9;
+    height: auto;
 }
